--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,10 @@
-add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_org.kde.krunner_filesearch\")
+add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_filesearch\")
 
-set(krunner_filesearch_SRCS krunner_filesearch.cpp)
+set(krunner_filesearch_SRCS filesearch.cpp)
 
-add_library(krunner_krunner_filesearch MODULE ${krunner_filesearch_SRCS})
-target_link_libraries(krunner_krunner_filesearch KF5::Runner KF5::I18n)
+add_library(krunner_filesearch MODULE ${krunner_filesearch_SRCS})
 
-install(TARGETS krunner_krunner_filesearch DESTINATION ${KDE_INSTALL_PLUGINDIR})
+target_link_libraries(krunner_filesearch KF5::Runner KF5::I18n KF5::Baloo KF5::KIOWidgets)
 
-install(FILES plasma-runner-krunner_filesearch.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
+install(TARGETS krunner_filesearch DESTINATION ${PLUGIN_INSTALL_DIR})
+install(FILES plasma-runner-filesearch.desktop DESTINATION ${SERVICES_INSTALL_DIR})
